# testtask1

./: CMakeLists.txt  CMakePresets.json  README.md  library.cpp  main.cpp
app/: CMakeLists.txt  main.cpp
logger/: CMakeLists.txt  logger.cpp  logger.h
